# asgard

./: .gitmodules  CMakeLists.txt  TC-mingw.cmake  cross-make-linux-windows.sh  generate_grammar.sh  make.sh
antlr4/: Asgard.g4  CMakeLists.txt  make.sh
antlr4/grammar/: Asgard.g4
antlr4/src/: main.cpp
include/asgard/: make_unique.h
include/asgard/code/: EnumMap.h  Signature.h  Typecode.h  get_typecode.h
include/asgard/codegen/: BuiltinDataType.h  ClassType.h  DataType.h  Declaration.h  Method.h  ModuleType.h  Namespace.h  Token.h  Type.h  packages.h
include/asgard/com/: Gateway.h  NetworkStream.h  Server.h
include/asgard/core/: ID.h  ReturnMe.h  TypeRegistry.h  exception.h  random.h
include/asgard/data/: Bin.h  Data.h  Enum.h  Exception.h  LogMessage.h  Request.h  Return.h  Value.h  Void.h  log_level_e.h
include/asgard/fs/: File.h
include/asgard/io/: BufferedInput.h  BufferedOutput.h  FifoInputSource.h  FifoOutputSource.h  FileInputSource.h  FileOutputSource.h  InputSource.h  OutputSource.h  PosixInputSource.h  PosixOutputSource.h  SocketInputSource.h  SocketOutputSource.h  TypeReader.h  TypeWriter.h  VectorInputSource.h  VectorOutputSource.h  get_typecode.h  type_code_t.h  typecode_t.h
include/asgard/mod/: Client.h  Messager.h  Module.h  Subscriber.h
include/asgard/net/: Endpoint.h  NamedEndpoint.h  SocketEndpoint.h  TcpEndpoint.h  UnixEndpoint.h
include/asgard/pipe/: Pipe.h  PipeIn.h
include/asgard/run/: Terminal.h  TerminalClient.hxx  Terminal_read_char.hxx  Terminal_read_char_return.hxx  Terminal_read_event.hxx  Terminal_read_event_return.hxx  terminal_event_e.hxx
include/asgard/time/: Timer.h  strtime.h  time.h
include/asgard/topic/: LogPublisher.h  Topic.h  TopicPtr.h
include/asgard/type/: EnumMap.h  Signature.h  TypeReader.h  TypeWriter.h  Typecode.h  get_typecode.h  io.h
include/asgard/util/: Fifo.h  UniqueQueue.h  crc.h  crc_32_iso_hdlc.h  crc_64_xz.h  ls.h  string.h  uintw_t.h
package/asgard/com/: Gateway.module  GatewayModule.cxx  GatewayModule.hxx  NetworkStream.module  NetworkStreamClient.cxx  NetworkStreamClient.hxx  NetworkStreamModule.cxx  NetworkStreamModule.hxx  Server.module  ServerClient.cxx  ServerClient.hxx  ServerModule.cxx
package/asgard/data/: Data.cxx  Data.hxx  DataPacket.cxx  DataPacket.data  DataPacket.hxx  EndOfFile.data  EndOfFile.hxx  Exception.data  Exception.hxx  Interrupt.hxx  LogMessage.cxx  LogMessage.data  LogMessage.hxx  Message.cxx  Message.data  Message.hxx  PleaseShutDown.data  PleaseShutDown.hxx  RPC.data  RPC.hxx  Request.data  Return.data  Return.hxx  Sample.cxx  Sample.data  Sample.hxx  log_level_e.cxx  log_level_e.enum  log_level_e.hxx
package/asgard/run/: Terminal.module  TerminalClient.cxx  TerminalClient.hxx  TerminalModule.cxx  TerminalModule.hxx  Terminal_read_char.cxx  Terminal_read_char.hxx  Terminal_read_char_return.cxx  Terminal_read_char_return.hxx  Terminal_read_event.cxx  Terminal_read_event.hxx  Terminal_read_event_return.cxx  Terminal_read_event_return.hxx  terminal_event_e.cxx  terminal_event_e.enum  terminal_event_e.hxx
package/data/asgard/data/: Data  DataPacket  Exception  LogMessage  Message  PleaseShutDown  RPC  Request  Return  Sample  log_level_e
package/data/asgard/run/: terminal_event_e
package/modules/asgard/com/: Gateway  NetworkStream  Server
package/modules/asgard/run/: Terminal
src/: Bin.cpp  BufferedInput.cpp  BufferedOutput.cpp  ClassType.cpp  Client.cpp  DataType.cpp  Declaration.cpp  Endpoint.cpp  Enum.cpp  EnumMap.cpp  Exception.cpp  Fifo.cpp  FifoInputSource.cpp  FifoOutputSource.cpp  File.cpp  FileInputSource.cpp  FileOutputSource.cpp  Gateway.cpp  ID.cpp  InputSource.cpp  LogMessage.cpp  LogPublisher.cpp  Messager.cpp  Method.cpp  Module.cpp  ModuleType.cpp  NamedEndpoint.cpp  Namespace.cpp  NetworkStream.cpp  OutputSource.cpp  Pipe.cpp  PipeIn.cpp  PosixInputSource.cpp  PosixOutputSource.cpp  RPC.cpp  Server.cpp  Signature.cpp  SocketEndpoint.cpp  SocketInputSource.cpp  SocketOutputSource.cpp  (+22 more)
src/linux/: Terminal.cpp  UnixEndpoint.cpp  ls.cpp
src/win32/: Terminal.cpp  ls.cpp
test/: CMakeLists.txt
test/calculator/: CMakeLists.txt  main.cpp
test/calculator/include/: Calculator.h  Math.h
test/calculator/package/: Calculator.module  CalculatorClient.cxx  CalculatorClient.hxx  CalculatorModule.cxx  CalculatorModule.hxx  Calculator_divide.cxx  Calculator_divide_return.cxx  Calculator_divide_return.hxx  Calculator_plus_return.cxx  Calculator_plus_return.hxx  Calculator_wait_for_sum.cxx  Calculator_wait_for_sum.hxx  Calculator_wait_for_sum_return.cxx  Calculator_wait_for_sum_return.hxx  Math.module  MathClient.cxx  MathClient.hxx  MathModule.cxx  MathModule.hxx
test/calculator/package/modules/: Calculator  Math
test/calculator/src/: Calculator.cpp  Math.cpp  main.cpp
test/server-client/: CMakeLists.txt  main_client.cpp  main_server.cpp
test/server-client/include/: StdIn.h  TextLine.h
test/server-client/package/: EchoGateway.module  EchoGatewayClient.cxx  EchoGatewayModule.cxx  EchoGatewayModule.hxx  EchoServer.module  EchoServerClient.cxx  EchoServerClient.hxx  ShoutGateway.module  ShoutGatewayClient.cxx  ShoutGatewayClient.hxx  ShoutGatewayModule.cxx  StdIn.module  StdInClient.cxx  StdInModule.cxx  StdInModule.hxx  TextLine.cxx  TextLine.data
test/server-client/package/data/: TextLine
test/server-client/package/modules/: EchoGateway  EchoServer  ShoutGateway  StdIn
test/server-client/src/: StdIn.cpp  main_client.cpp  main_server.cpp
test/type-io/: CMakeLists.txt
test/type-io/src/: main.cpp
